--- a/aGTS/res/values/strings.xml
+++ b/aGTS/res/values/strings.xml
@@ -7,14 +7,17 @@
 <string name="about">About</string>
 <string name="about_message">Despre...</string>
 <string name="info">Info</string>
-
 <string name="latitude">Set latitude user</string>
 <string name="route">Route</string>
+
+<string name="preference_behavior">Run settings</string>
+<string name="preference_latitude">Google latitude</string>
 <string name="wifi_title">Use any Open AP</string>
 <string name="wifi_summary">Enables aggressive automatic WiFi connection to any open AP .</string>
 <string name="precision_title">Logging precision</string>
-<string name="preference_behavior">Run settings</string>
 <string name="precision_summary">The size of interval between GPS fixes.</string>
+<string name="latitude_title">Latitude account id</string>
+<string name="latitude_summary">Google latutide id, not user!</string>
 <string name="menu_settings">Settings</string>
 <string name="service_networkstatus">Logging: %s (%s with cell tower and wifi)</string>
 <string name="service_gpsstatus">Logging: %s (%s with %d satellites)</string>
