--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -8,4 +8,4 @@ Settings
 
 = Details =
 
-To configure your server, OpenGTS account, user and password, please check AndroidManifest.xml and gtsvalues.xml
+To configure your server, OpenGTS account, user and password, please check `AndroidManifest.xml` and `gtsvalues.xml`
