--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -9,3 +9,7 @@ Settings
 = Details =
 
 To configure your server, OpenGTS account, user and password, please check `AndroidManifest.xml` and `gtsvalues.xml`
+
+Of course, we provide a free server for test and private use only at:
+
+[http://www.sysoptrack.org/]http://www.sysoptrack.org/
