--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -13,3 +13,5 @@ To configure your server, OpenGTS account, user and password, please check `Andr
 Of course, we provide a free server for test and private use only at:
 
 [http://www.sysoptrack.org/ SysopTrack.org]
+
+Update: now works with latest OpenGTS (2.2.8), gprmc and events servlets.
